--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head> this is the head</head>
 <body>
-  This is my first page. its great.have a nice day. lets check the sync.enjoy. playwith git.
+  <h1>This is my first page. its great.have a nice day. lets check the sync.enjoy. playwith git.</h1>
 </body>
 </html>
